--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 	<head>
-		<title>Twatchat.com</title>
+		<title>Tank you</title>
 
 		<link rel="stylesheet" type="text/css" href="style.css">
 
@@ -13,6 +13,6 @@
 		<meta charset="UTF-8">
 	</head>
 
-	<body>
+	<body id="body">
 	</body>
 </html>
